ghc-4335c07/testsuite/tests/ghci/T11827/T11827.stderr

A.hs:6:3: error: Not in scope: data constructor ‘C’
